Stop leaving a gap between cover photo and nav bar on artist profiles on phones

--- a/booking/assets/scss/layout/_common.scss
+++ b/booking/assets/scss/layout/_common.scss
@@ -1,5 +1,8 @@
 #main {
 	padding-top: 64px;
+	@include media ('<=phone') {
+		padding-top: 56px;
+	}
 }
 a, .link {
 	color: $color-primary-main;
